version 0.6.2cvs

- no longer strip colour/style codes from messages

18-10-2002: version 0.6.1

- fixed segfault on some weird notification packets
- fixes for conference add invite
- identity support for conferences

- sample console client can handle conferencing

9-10-2002: version 0.6

- Removed glib dependencies.  Will use glib only if available
- Configure time option --with-struct-callbacks to use a callback struct
instead of callback functions (see yahoo2_callbacks.h and the README)
- Code cleanups by Steve McAndrewSmith
- Get identities from server
- Activate/Deactivate identities
- Use identities when sending messages
- Fixed buffer overflow in key/value pair reading

- sample console client no longer requires gtk!

22-7-2002: version 0.5

- Added basic documentation to README
- Several minor code fixes and cleanups

20-7-2002: version 0.5.cvs

This is an initial public release as a separate library
I'll put a feature list in later.
0.5 is just a random version number, I figure it's got half the features
of where it should be when complete.