@@ -1,6 +1,6 @@
 dnl Process this file with autoconf to produce a configure script.
 AC_INIT(src/libyahoo2.c)
-AM_INIT_AUTOMAKE([libyahoo2], [0.6.1])
+AM_INIT_AUTOMAKE([libyahoo2], [0.6.2cvs])
 AM_CONFIG_HEADER(config.h)
 
 # Checks for programs.
@@ -29,6 +29,6 @@ AC_FUNC_MALLOC
 AC_CHECK_FUNCS([memset strchr strcspn strdup strncasecmp strrchr strstr strtol])
 
 AM_PATH_GLIB(1.2.0, [AC_DEFINE(HAVE_GLIB, 1, [Define if you have glib 1.2.0 or higher])])
-CFLAGS="$CFLAGS -Wall -ansi"
+CFLAGS="$CFLAGS -Wall -ansi -pedantic"
 
 AC_OUTPUT([Makefile src/Makefile])
