@@ -1,6 +1,7 @@
 version 0.6.2cvs
 
 - no longer strip colour/style codes from messages
+- compiles with -ansi and -pedantic
 
 18-10-2002: version 0.6.1
 
